--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">MVVM Drinks Projects</string>
+    <string name="app_name">MVVM Reqres Login API</string>
 </resources>
